[project]
name = "net-ready-eyes"
version = "0.1.0"
description = "An image processing tool to recognize cards from a region of interest within a camera feed."
authors = [
    {name = "Eric Heiden",email = "eric.heiden@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "wmi (>=1.5.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
